fixed text alignment on linked pages

--- a/pages/styles-2.css
+++ b/pages/styles-2.css
@@ -20,6 +20,7 @@ h1 {
 
 p, h4 {
     font-size: 24px;
+    text-align: center;
 }
 
 h4 {
